Added basic mouse support, lots of refactoring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+arboard = "3.2.1"
 chrono = "0"
 termion = "2"
 unicode-segmentation = "1"
